[package]
name = "zscdoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.1", features = ["derive"] }
comrak = "0.12.1"
itertools = "0.10.3"
once_cell = "1.9.0"
typed-html = { git = "https://github.com/bodil/typed-html" }
rust-embed = { version = "6.3.0", features = ["compression", "interpolate-folder-path"] }
zscript_parser = { git = "https://gitlab.com/Gutawer/zscript_parser", features = ["multithreaded", "gzd_folder_filesystem"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
pulldown-cmark = "0.9.1"
textwrap = "0.14.2"

[build-dependencies]
fs_extra = "1.2.0"
