[package]
name = "zscdoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.1", features = ["derive"] }
comrak = "0.12.1"
itertools = "0.10.3"
once_cell = "1.9.0"
typed-html = { git = "https://github.com/bodil/typed-html", rev = "e18d328951b6b9216976d180f3dea2e6600a3982" }
rust-embed = { version = "6.3.0", features = ["compression", "interpolate-folder-path"] }
zscript_parser = { path = "../zscript_parser", features = ["multithreaded", "gzd_folder_filesystem"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
pulldown-cmark = "0.9.1"
textwrap = "0.14.2"
toml = "0.5.8"
vec1 = "1.8.0"

[build-dependencies]
fs_extra = "1.2.0"
